--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ body {
     padding-top: 7px;
     border-radius: 5px;
     background-color:rgb(1, 13, 17);
-    background-image: linear-gradient(to right, #FF0000, #FF0000);
+    background-image: linear-gradient(to right, #FF0000, #33ff00);
 
 
 }
