--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ body {
 
 /* about us */
 #about {
-    background: #f8f9f9;
+    background: #12b8b8;
     padding-bottom: 50px;
     padding-top: 50px;
 }
@@ -199,11 +199,11 @@ body {
 .media img{
     width: 50px;
     padding:8px ;
-    transition: 0.5s;
+    transition: 0.7s;
 }
 
 #social_media {
-    background: #f8f9f9;
+    background: #fc0101;
     padding: 100px 0;
 }
 
@@ -217,17 +217,17 @@ body {
     transform: translatey(-10px);
 }
 
-#forter {
+#footer {
     background-image: linear-gradient(to right, #baa117, #5f1782);
-    color: Red;
+    color: rgb(20, 2, 2);
 
 }
 
-.forter_box {
+.footer_box {
     padding: 20px;
 }
 
-.forter_box .fa 
+.footer_box .fa 
 {
     margin-right: 8px;
     font-size: 20px;
@@ -241,7 +241,7 @@ body {
 
 }
 
-.forter_box .form-control {
+.footer_box .form-control {
     border: none;
     max-width: 250px;
     box-shadow: none !important;
@@ -249,7 +249,7 @@ body {
     border-radius: 0;
 }
 
-.forter_box .btn-primary {
+.footer_box .btn-primary {
     border: none;
     box-shadow: none !important;
     margin-top: 30px;
